# twitscraper

./: .gitignore  pyproject.toml  requirements.txt
twitscraper/: __init__.py  auth_cookie.pkl  generate_cookies.py  scraper.py  utils.py
twitscraper/tests/: test.py
