[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools]
packages = ["twitscraper"]

[tool.setuptools.package-data]
twitscraper = ["*.pkl"]

[tool.setuptools.dynamic]
version = { attr = "twitscraper.__version__" }

[project]
name = "twitscraper"
dynamic = ["version"]
dependencies = [
  "selenium<4.11",
  "selenium-firefox",
]

[project.optional-dependencies]
dev = [
  "pytest",
]
